--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
 :root { font-size: 1.125rem; }
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #000000;
+  }
+  h1, .tsummary {
+    color: #eeeeee;
+  }
+}
+    
 @media (min-width: 600px) { :root { font-size: 1.5rem; } }
 @media (min-width: 900px) { :root { font-size: 1.75rem; } }
 @media (min-width: 1200px) { :root { font-size: 2rem; } }
