--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: FFFFFF
   background: #FFF;
 }
 .messages {
